--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ code {
     monospace;
 }
 
+*:focus {
+  outline: none;
+}
+
 @media screen and (max-width: 480px) {
   body {
     padding-left: 1rem;
