--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,8 +1,10 @@
+@value blandColor from '../../../common/colors.css';
+
 .button {
   color: #fff;
   font-size: 1.1em;
   font-weight: 600;
-  background-color: #cb997e;
+  background-color: blandColor;
   outline: none;
   border: 0;
   border-radius: 2px;
