--- a/src/components/NewProduct/NewProduct.module.css
+++ b/src/components/NewProduct/NewProduct.module.css
@@ -1,3 +1,5 @@
+@value blandColor from '../../common/colors.css';
+
 .container {
   display: flex;
   flex-direction: column;
@@ -31,7 +33,7 @@
   margin: 1em;
   font-size: 0.5em;
   font-weight: 600;
-  background-color: #cb997e;
+  background-color: blandColor;
   outline: none;
   border: 0;
   border-radius: 0;
@@ -45,7 +47,12 @@
 }
 
 .productImage {
-  width: 80%;
+  width: 40%;
   height: 100%;
   margin-bottom: 1em;
+}
+@media screen and (max-width: 480px) {
+  .productImage {
+    width: 80%;
+  }
 }
