--- a/src/components/NewProduct/NewProduct.module.css
+++ b/src/components/NewProduct/NewProduct.module.css
@@ -17,18 +17,9 @@
   width: 80%;
 }
 
-.container input {
-  width: 100%;
-  height: 2em;
-  border-radius: 0;
-  border: 1px solid black;
-  display: flex;
-  padding: 0.5em;
-  margin: 0.3em;
-}
-
 .button {
   width: 50%;
+  height: 70%;
   color: #fff;
   margin: 1em;
   font-size: 0.5em;
@@ -39,6 +30,8 @@
   border-radius: 0;
   padding: 0.5em 1em;
   text-transform: uppercase;
+  display: flex;
+  justify-content: center;
 }
 
 .button:hover {
@@ -51,6 +44,12 @@
   height: 100%;
   margin-bottom: 1em;
 }
+
+.successMeg {
+  font-size: 0.5em;
+  font-weight: 300;
+}
+
 @media screen and (max-width: 480px) {
   .productImage {
     width: 80%;
