--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,16 @@ code {
   outline: none;
 }
 
+input {
+  width: 100%;
+  height: 2em;
+  border-radius: 0;
+  border: 1px solid black;
+  display: flex;
+  padding: 0.5em;
+  margin: 0.3em;
+}
+
 @media screen and (max-width: 480px) {
   body {
     padding-left: 1rem;
