--- a/src/components/ItemList/ItemList.module.css
+++ b/src/components/ItemList/ItemList.module.css
@@ -23,3 +23,31 @@
   -webkit-box-shadow: 6px 4px 8px 3px rgba(0, 0, 0, 0.1);
   box-shadow: 6px 4px 8px 3px rgba(0, 0, 0, 0.1);
 }
+.loader_container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  background: rgba(243, 242, 233, 0.834);
+  z-index: 1;
+}
+
+.spinner {
+  margin-top: 7em;
+  width: 50px;
+  height: 50px;
+  border: 8px solid;
+  border-color: blandColor transparent blandColor transparent;
+  border-radius: 50%;
+  animation: spin-anim 1.2s linear infinite;
+}
+
+@keyframes spin-anim {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
