Product Detail page

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,4 @@
-@value blandColor from '../../common/colors.css';
+@value brandColor from '../../common/colors.css';
 
 a {
   color: black;
@@ -20,7 +20,7 @@ a {
   font-weight: 600;
   display: flex;
   align-items: center;
-  color: blandColor;
+  color: brandColor;
 }
 
 .menu {
