--- a/src/components/ItemList/ItemList.module.css
+++ b/src/components/ItemList/ItemList.module.css
@@ -1,19 +1,21 @@
-@value blandColor from '../../common/colors.css';
+@value brandColor from '../../common/colors.css';
 
 .itemList {
   list-style: none;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  padding: 0;
 }
 
 .item {
   width: 320px;
   height: 440px;
-  margin-right: 1em;
+  margin: 1em;
   margin-bottom: 2em;
   border-radius: 5px;
   background-color: antiquewhite;
+  overflow: hidden;
 }
 
 .item:hover {
@@ -22,6 +24,7 @@
   top: -10;
   -webkit-box-shadow: 6px 4px 8px 3px rgba(0, 0, 0, 0.1);
   box-shadow: 6px 4px 8px 3px rgba(0, 0, 0, 0.1);
+  scale: 103%;
 }
 .loader_container {
   width: 100%;
@@ -38,7 +41,7 @@
   width: 50px;
   height: 50px;
   border: 8px solid;
-  border-color: blandColor transparent blandColor transparent;
+  border-color: brandColor transparent brandColor transparent;
   border-radius: 50%;
   animation: spin-anim 1.2s linear infinite;
 }
