--- a/src/components/ProductDetail/ProductDetail.module.css
+++ b/src/components/ProductDetail/ProductDetail.module.css
@@ -23,10 +23,17 @@
   margin-bottom: 1.5em;
 }
 
+.buttonContainer {
+  display: flex;
+  justify-content: space-evenly;
+}
+
 .titleContainer h4 {
   margin-bottom: 0.7em;
 }
-
+.modalTitle {
+  margin-bottom: 1em;
+}
 .image {
   width: 40%;
   height: 100%;
