Price in Cart page

--- a/src/common/colors.css
+++ b/src/common/colors.css
@@ -1,4 +1,5 @@
 @value brandColor: #cb997e;
 @value brandColorDark: #9c735d;
 @value brandGrey: #4d4d4d;
+@value brandGreyLight: #e6e5e585;
 @value borderColor: #cb997e4c;
