Custom hooks-Products

--- a/src/components/CartItem/CartItem.module.css
+++ b/src/components/CartItem/CartItem.module.css
@@ -1,3 +1,5 @@
+@value borderColor,brandGreyLight, brandColorDark from '../../common/colors.css';
+
 .productInfoContainer {
   display: flex;
   align-items: center;
