--- a/src/components/Item/Item.module.css
+++ b/src/components/Item/Item.module.css
@@ -16,7 +16,7 @@
   justify-content: space-between;
   align-items: center;
   margin: 0;
-  padding: 1em;
+  padding: 0.5em 1em;
   font-size: 0.9em;
   white-space: nowrap;
   overflow: hidden;
@@ -33,4 +33,8 @@
 
 .titleContainer {
   text-align: start;
+}
+
+.titleContainer p {
+  margin: 0.3em;
 }
