--- a/src/components/ItemList/ItemList.module.css
+++ b/src/components/ItemList/ItemList.module.css
@@ -10,7 +10,7 @@
 
 .item {
   width: 320px;
-  height: 440px;
+  height: 410px;
   margin: 1em;
   margin-bottom: 2em;
   overflow: hidden;
@@ -21,10 +21,11 @@
   scale: 103%;
 }
 .loader_container {
-  width: 65%;
-  height: 100vh;
+  width: 90%;
+  height: 80vh;
   display: flex;
   justify-content: center;
+  margin: auto;
   position: fixed;
   z-index: 1;
 }
