--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -14,12 +14,120 @@
   text-align: center;
 }
 
+.mainContainer {
+  position: relative;
+  display: flex;
+}
+
+.sideBar {
+  width: 80px;
+  position: relative;
+}
+
+.sideBar ul {
+  position: absolute;
+  padding: 0;
+  top: 40%;
+  left: 30%;
+}
+
+.sideBar li {
+  height: 100%;
+  list-style: none;
+  font-weight: 300;
+  border-bottom: 1px solid black;
+  padding-bottom: 1em;
+  padding-top: 1em;
+}
+
+.mainImageContainer {
+  position: relative;
+  display: flex;
+  height: 810px;
+}
+
+.mainTextContainer {
+  position: absolute;
+  z-index: 1;
+  right: 100px;
+  top: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  text-align: start;
+}
+
+.mainImageContainer img {
+  width: 80%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.ImageTitle {
+  font-weight: 300;
+  font-size: 1em;
+}
+
+.subText {
+  font-family: elza, sans-serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 3em;
+  margin-top: 0.3em;
+}
+
+.organic {
+  margin-right: 0.8em;
+}
+
+@media screen and (max-width: 1000px) {
+  .mainImageContainer {
+    height: 600px;
+  }
+
+  .mainTextContainer {
+    right: 30px;
+    top: 40%;
+  }
+
+  .mainImageContainer img {
+    width: 90%;
+    height: 100%;
+  }
+}
+
 @media screen and (max-width: 480px) {
+  .mainImageContainer {
+    display: flex;
+    height: 844px;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    width: 80%;
+  }
+
+  .mainTextContainer {
+    left: 100px;
+    top: 50%;
+  }
+
+  .mainImageContainer img {
+    width: 100%;
+    height: 100%;
+  }
+
   .slideContainer {
     zoom: 50%;
   }
   .each-slide-effect > div {
     width: 100%;
     background-size: 300px 150px;
+  }
+
+  .ImageTitle {
+    font-size: 0.8em;
+  }
+
+  .subText {
+    font-size: 2em;
   }
 }
