--- a/src/components/ItemList/ItemList.module.css
+++ b/src/components/ItemList/ItemList.module.css
@@ -9,9 +9,9 @@
 }
 
 .item {
-  width: 320px;
-  height: 410px;
-  margin: 1em;
+  width: 250px;
+  height: 400px;
+  margin: 0.3em;
   margin-bottom: 2em;
   overflow: hidden;
 }
@@ -46,5 +46,14 @@
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .itemList {
+    margin-top: 2em;
+  }
+  .item {
+    width: 180px;
   }
 }
