--- a/src/components/ProductDetail/ProductDetail.module.css
+++ b/src/components/ProductDetail/ProductDetail.module.css
@@ -3,10 +3,12 @@
 .container {
   display: flex;
   justify-content: center;
+  margin-top: 3em;
 }
 
 .product_info_container {
   width: 50%;
+  max-width: 400px;
   text-align: start;
   margin-left: 2em;
   margin-bottom: 3em;
@@ -15,10 +17,15 @@
 }
 
 .titleContainer {
-  border-bottom: 1px solid brandColor;
   font-size: 1.2em;
+  margin-bottom: 2em;
 }
-
+.titleContainer p,
+h3,
+h4 {
+  margin-top: 0;
+  margin-bottom: 0.5em;
+}
 .selectContainer {
   margin-bottom: 1.5em;
 }
@@ -35,9 +42,10 @@
   margin-bottom: 1em;
 }
 .image {
-  border-radius: 5px;
   width: 40%;
-  height: 100%;
+  max-width: 500px;
+  max-height: 700px;
+  object-fit: cover;
 }
 
 .category {
@@ -66,13 +74,14 @@
 /* Small size */
 @media screen and (max-width: 480px) {
   .image {
-    width: 70%;
-    height: 100%;
+    width: 100%;
+    height: 500px;
   }
 
   .container {
     align-items: center;
     flex-direction: column;
+    padding: 1.5em;
   }
 
   .product_info_container {
