--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 html {
-  max-width: 1200px;
+  max-width: 1600px;
   text-align: center;
   margin: auto;
 }
@@ -24,6 +24,10 @@ code {
   outline: none;
 }
 
+section {
+  max-width: 1500px;
+}
+
 input {
   width: 100%;
   height: 2em;
@@ -36,7 +40,29 @@ input {
 
 @media screen and (max-width: 480px) {
   body {
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding-left: 0rem;
+    padding-right: 0;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateX(30vh);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0vh);
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+    transform: translateX(0vh);
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(30vh);
   }
 }
