--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -4,7 +4,8 @@
   justify-content: center;
   background-size: cover;
   background-position: center center;
-  height: 350px;
+  height: 300px;
+  margin-top: 2em;
 }
 
 .each-slide-effect span {
