--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -27,7 +27,7 @@
 .mainImageContainer {
   position: relative;
   display: flex;
-  height: 810px;
+  height: 850px;
 }
 
 .mainTextContainer {
@@ -58,6 +58,25 @@
   font-weight: 900;
   font-size: 3em;
   margin-top: 0.3em;
+}
+
+.scrollDownContainer {
+  position: absolute;
+  bottom: 100px;
+  left: 300px;
+}
+
+.scrollDown {
+  position: relative;
+  font-size: 1em;
+  font-weight: 300;
+  transform: rotate(90deg);
+}
+
+.scrollDownContainer p {
+  position: absolute;
+  top: 120%;
+  left: 46%;
 }
 
 .organic {
@@ -91,9 +110,15 @@
 
   .mainTextContainer {
     left: 100px;
-    top: 50%;
+    top: 30%;
+  }
+  .scrollDownContainer {
+    top: 60%;
   }
 
+  .scrollDownContainer p {
+    top: 25%;
+  }
   .mainImageContainer img {
     width: 100%;
     height: 100%;
