--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,8 +4,12 @@ a {
   color: black;
   text-decoration: none;
 }
+
 .nav {
-  height: 4rem;
+  max-width: 1600px;
+  padding: 0 3em 0 3em;
+  margin: 0;
+  height: 5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -61,8 +65,7 @@ a {
   .nav {
     display: block;
     height: 6rem;
-
-    padding-bottom: 0.5em;
+    padding: 0 0.5em 6em 0.5em;
     display: inline;
   }
 
