My cart size error

--- a/src/components/CartItem/CartItem.module.css
+++ b/src/components/CartItem/CartItem.module.css
@@ -62,7 +62,7 @@
   }
 
   .titleContainer {
-    margin: 0em 1em 0em 1em;
+    margin: 0em 0.3em 0em 0.3em;
   }
 
   .image {
@@ -76,15 +76,15 @@
   }
 
   .buttonContainer {
-    margin-right: 0.5em;
+    margin-right: 0;
   }
 
   .productPrice {
     width: 90px;
-    margin: 0em 1em 0em 1em;
+    margin: 0em 0.5em 0em 0.3em;
   }
 
   .buttonContainer div {
-    padding: 0 0.5em;
+    padding: 0 0.3em;
   }
 }
