--- a/src/components/MyCart/MyCart.module.css
+++ b/src/components/MyCart/MyCart.module.css
@@ -127,6 +127,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-width: 330px;
+    margin: auto;
   }
 
   .carts header {
