Burger menu & Category search

--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -15,6 +15,12 @@
   text-align: center;
 }
 
+@media screen and (max-width: 1200px) {
+  .section {
+    max-width: 900px;
+  }
+}
+
 @media screen and (max-width: 480px) {
   .section {
     margin: auto;
