--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -17,11 +17,13 @@ a {
   font-style: normal;
   font-weight: 300;
   text-transform: uppercase;
+  position: relative;
 }
 
 .leftNav {
   display: flex;
-  margin-left: 80px;
+  align-items: center;
+  margin-left: 15px;
 }
 
 .title_container {
@@ -30,6 +32,40 @@ a {
   display: flex;
   align-items: center;
   color: brandColor;
+}
+.burgerMenu {
+  margin-right: 1em;
+}
+
+.toggleMenu {
+  position: absolute;
+  height: 60vw;
+  width: 180px;
+  top: 64px;
+  left: 45px;
+  background-color: white;
+  z-index: 1;
+}
+
+.toggleMenu ul {
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: atuo;
+}
+
+.toggleMenu li {
+  margin: 1em 0em 1em 0em;
+  font-weight: 300;
+  width: 80%;
+}
+
+.toggleMenu li:hover {
+  cursor: pointer;
 }
 
 .menu {
@@ -63,10 +99,23 @@ a {
 
 @media screen and (max-width: 480px) {
   .nav {
-    display: block;
     height: 6rem;
     padding: 0 0.5em 6em 0.5em;
     display: inline;
+    position: relative;
+  }
+
+  .burgerMenu {
+    position: absolute;
+    left: -193px;
+    bottom: 82px;
+  }
+
+  .toggleMenu {
+    height: 205vw;
+    top: 211px;
+    left: -185px;
+    z-index: 2;
   }
 
   .leftNav {
