--- a/src/index.css
+++ b/src/index.css
@@ -68,12 +68,24 @@ input {
 }
 
 @keyframes fadeOut {
-  0% {
+  100% {
     opacity: 1;
     transform: translateX(0vh);
   }
-  100% {
+  0% {
     opacity: 0;
     transform: translateX(30vh);
+  }
+}
+
+@keyframes fadeSide {
+  0% {
+    opacity: 0;
+    transform: translateX(-10vh);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0vh);
   }
 }
