Show Login page when non user try to add a item to cart

--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -364,7 +364,7 @@
 
   .item_soap .desBox {
     left: 100px;
-    top: 100px;
+    top: 65px;
   }
 
   .item_serum .title {
@@ -395,7 +395,8 @@
   }
 
   .item_lip .desBox {
-    left: 20px;
+    width: 90%;
+    left: 30px;
     bottom: 40px;
   }
 
