--- a/src/components/MyCart/MyCart.module.css
+++ b/src/components/MyCart/MyCart.module.css
@@ -108,6 +108,14 @@
   font-weight: 600;
 }
 
+.total {
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.8em;
+  font-weight: 500;
+  margin: 0.5em 0em 0.5em 0em;
+}
+
 @media screen and (max-width: 1100px) {
   .container {
     flex-direction: column;
@@ -186,5 +194,9 @@
     margin-top: 7em;
     max-width: 300px;
     margin: auto;
+  }
+
+  .total {
+    margin-bottom: 0;
   }
 }
