--- a/src/components/ProductDetail/ProductDetail.module.css
+++ b/src/components/ProductDetail/ProductDetail.module.css
@@ -73,6 +73,9 @@ h4 {
 
 /* Small size */
 @media screen and (max-width: 480px) {
+  .modal {
+    width: 270px;
+  }
   .image {
     width: 100%;
     height: 500px;
