--- a/src/components/ReviewForm/ReviewForm.module.css
+++ b/src/components/ReviewForm/ReviewForm.module.css
@@ -2,11 +2,13 @@
 
 .writeRivewContainer {
   text-align: start;
+  max-width: 1200px;
 }
 
 .writeRivewContainer input {
   margin: 0;
   border-radius: 3px;
+  width: 100%;
 }
 
 .writeRivewContainer p {
@@ -15,4 +17,15 @@
 
 .inputBox {
   margin: 2.5em 0em 2.5em 0em;
+}
+
+@media screen and (max-width: 450px) {
+  .writeRivewContainer {
+    width: 350px;
+  }
+
+  .writeRivewContainer textarea {
+    width: 330px;
+    margin-left: 0.1em;
+  }
 }
