--- a/src/components/MyCart/MyCart.module.css
+++ b/src/components/MyCart/MyCart.module.css
@@ -116,13 +116,36 @@
   margin: 0.5em 0em 0.5em 0em;
 }
 
+@media screen and (max-width: 1500px) {
+  .carts {
+    width: 1100px;
+  }
+
+  .container {
+    width: 1100px;
+  }
+
+  .cartContainer {
+    width: 60%;
+    padding: 2em;
+  }
+}
+
 @media screen and (max-width: 1100px) {
+  .carts {
+    width: 800px;
+  }
+
+  .cartContainer {
+    width: 100%;
+  }
   .container {
     flex-direction: column;
+    width: 100%;
   }
 
   .totalContainer {
-    width: 100%;
+    width: 800px;
     margin-bottom: 2em;
     margin-top: 1em;
   }
