--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -1,26 +1,56 @@
 .container {
+  top: 100%;
   position: fixed;
   width: 500px;
   height: 500px;
   padding: 10px;
   border-radius: 10px;
-  background-color: white;
-  top: 50%;
+  background-color: rgb(243, 242, 237);
+
   left: 50%;
-  margin-top: -250px; /* Negative half of height. */
-  margin-left: -250px; /* Negative half of width. */
+  margin-top: -250px;
+  margin-left: -250px;
   z-index: 5;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.closeBtn {
-  position: absolute;
-  right: 10px;
+.containerAni {
+  position: fixed;
+  width: 500px;
+  height: 500px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: rgb(243, 242, 237);
+  top: 50%;
+  left: 50%;
+  margin-top: -250px;
+  margin-left: -250px;
+  z-index: 5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  animation-name: showUp;
+  animation-duration: 300ms;
 }
 
-.container input {
+@keyframes showUp {
+  0% {
+    top: 100%;
+  }
+
+  100% {
+    top: 50%;
+  }
+}
+
+.closeBtn {
+  position: absolute;
+  right: -220px;
+}
+
+.containerAni input {
   width: 400px;
   font-size: 1em;
   border-radius: 10px;
@@ -38,14 +68,14 @@
   margin-bottom: 2em;
 }
 
-.container h1 {
+.containerAni h1 {
   font-weight: 500;
   font-size: 1.8em;
   text-transform: capitalize;
-  margin-top: 1em;
+  margin-top: 0em;
 }
 
-.container h3 {
+.containerAni h3 {
   color: grey;
   text-transform: lowercase;
   font-weight: 400;
@@ -57,4 +87,28 @@
   font-size: 0.9em;
   margin-bottom: 1em;
   text-transform: none;
+}
+
+@media screen and (max-width: 450px) {
+  .containerAni {
+    width: 335px;
+    height: 500px;
+    top: 50%;
+    left: 50%;
+    margin-top: -250px; /* Negative half of height. */
+    margin-left: -175px; /* Negative half of width. */
+    z-index: 5;
+  }
+
+  .containerAni input {
+    width: 250px;
+  }
+
+  .loginbtn {
+    width: 250px;
+  }
+
+  .closeBtn {
+    right: -150px;
+  }
 }
