Filtering by skintype and concern & Product detail - show Skin type and cocnern info

--- a/src/components/ItemList/ItemList.module.css
+++ b/src/components/ItemList/ItemList.module.css
@@ -1,11 +1,14 @@
 @value brandColor, borderColor from '../../common/colors.css';
 
 .itemList {
+  width: 100%;
   list-style: none;
   display: flex;
   justify-content: center;
+  margin: auto;
   flex-wrap: wrap;
   padding: 0;
+  position: relative;
 }
 
 .item {
@@ -89,6 +92,52 @@
   background-color: borderColor;
 }
 
+.selectBox {
+  position: absolute;
+  background-color: rgb(235, 226, 216);
+  top: -15px;
+  left: 110px;
+  width: 350px;
+  justify-content: center;
+  padding: 1em;
+  height: 30vh;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+}
+
+.selectBoxMobile {
+  position: absolute;
+  background-color: rgb(243, 230, 213);
+  top: 0;
+  right: 5px;
+  width: 90vw;
+  justify-content: center;
+  padding: 1em;
+  height: 30vh;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+}
+
+.skintype {
+  margin-bottom: 1em;
+}
+
+.filterIcon {
+  position: absolute;
+  top: 30px;
+  left: 110px;
+  font-size: 1.1em;
+}
+
+.filterIconMobile {
+  position: absolute;
+  top: 30px;
+  left: 50px;
+  font-size: 1.1em;
+}
+
 @keyframes spin-anim {
   0% {
     transform: rotate(0deg);
@@ -128,5 +177,6 @@
 
   .sortList {
     left: 130px;
+    z-index: 3;
   }
 }
