--- a/src/components/ProductDetail/ProductDetail.module.css
+++ b/src/components/ProductDetail/ProductDetail.module.css
@@ -63,6 +63,53 @@ h4 {
   margin-bottom: 2em;
 }
 
+.tableText {
+  margin-top: 3em;
+  font-size: 1.1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 1.5em;
+}
+
+.tableText .text {
+  margin-left: 0.3em;
+  margin-right: 0.3em;
+}
+
+.line {
+  display: inline-block;
+  height: 1px;
+  width: 70px;
+  background-color: #f7ead8;
+}
+
+.rowHeader {
+  display: flex;
+  justify-content: space-around;
+  font-size: 1.2em;
+  font-weight: 600;
+  background-color: #eae0da;
+  padding: 0.5em;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.row {
+  display: flex;
+  justify-content: space-around;
+  font-weight: 300;
+  background-color: #f7f5eb;
+  padding: 0.5em;
+  font-size: 1.1em;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.cell {
+  width: 100px;
+}
+
 /* Med size  */
 @media screen and (max-width: 1200px) {
   .image {
