--- a/src/components/NewProduct/NewProduct.module.css
+++ b/src/components/NewProduct/NewProduct.module.css
@@ -16,6 +16,9 @@
   flex-direction: column;
   width: 80%;
 }
+.container input {
+  border-radius: 5px;
+}
 
 .button {
   width: 50%;
@@ -50,8 +53,26 @@
   font-weight: 300;
 }
 
+.selectBox {
+  margin: 0.5em 0em 0.5em 0em;
+  display: flex;
+  width: 100%;
+  align-items: center;
+}
+
+.selectBox span {
+  font-size: 0.5em;
+  font-weight: 400;
+  width: 30%;
+  text-align: left;
+}
+
 @media screen and (max-width: 480px) {
   .productImage {
     width: 80%;
+  }
+
+  .selectBox span {
+    width: 50%;
   }
 }
