--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -272,6 +272,84 @@
   background-color: black;
 }
 
+.container {
+  top: 100%;
+  position: fixed;
+  width: 700px;
+  height: 500px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #97a9a6;
+  left: 50%;
+  margin-top: -250px;
+  margin-left: -250px;
+  z-index: 5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.containerAni {
+  position: fixed;
+  width: 600px;
+  height: 600px;
+  padding: 10px;
+  border-radius: 10px;
+  background-image: url(https://res.cloudinary.com/nara9709/image/upload/v1678254073/Pop_a_Pimple_Properly_fifc9e.png);
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  top: 50%;
+  left: 50%;
+  margin-top: -250px;
+  margin-left: -250px;
+  z-index: 5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  animation-name: showUp;
+  animation-duration: 300ms;
+  box-shadow: 5.4px 10.7px 10.7px hsl(0deg 0% 0% / 0.33);
+}
+
+.containerAni .closeBtn {
+  right: -270px;
+}
+
+@keyframes showUp {
+  0% {
+    top: 100%;
+  }
+
+  100% {
+    top: 50%;
+  }
+}
+
+.containerAni h1 {
+  color: rgba(255, 255, 255, 0.795);
+  font-weight: 900;
+  font-size: 4em;
+  text-transform: uppercase;
+  margin-top: 1.5em;
+  margin-bottom: 0.2em;
+}
+
+.containerAni h3 {
+  color: rgba(255, 255, 255, 0.795);
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 1.5em;
+}
+
+.testBtn {
+  margin-top: 1em;
+  font-size: 2em;
+}
+
 @media screen and (max-width: 1000px) {
   .mainImageContainer {
     height: 600px;
