--- a/src/components/QuizIntro/QuizIntro.module.css
+++ b/src/components/QuizIntro/QuizIntro.module.css
@@ -10,12 +10,14 @@
 
 .section h2 {
   color: #0d5b48;
-  font-size: 2em;
+  font-size: 4em;
+  margin-top: 2em;
   text-transform: uppercase;
 }
 
 .section h3 {
-  margin-top: 3em;
+  margin-top: 1em;
+  font-size: 2em;
   font-weight: 400;
 }
 
@@ -24,4 +26,14 @@
   margin: auto;
   margin-top: 3em;
   font-weight: 300;
+  font-size: 1.5em;
+}
+
+.avatar_image {
+  width: 100%;
+  margin: auto;
+}
+
+.avatar_image img {
+  margin-top: 10em;
 }
