--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -273,20 +273,7 @@
 }
 
 .container {
-  top: 100%;
-  position: fixed;
-  width: 700px;
-  height: 500px;
-  padding: 10px;
-  border-radius: 10px;
-  background-color: #97a9a6;
-  left: 50%;
-  margin-top: -250px;
-  margin-left: -250px;
-  z-index: 5;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: none;
 }
 
 .containerAni {
@@ -393,6 +380,35 @@
   .mainImageContainer img {
     width: 100%;
     height: 100%;
+  }
+
+  .containerAni {
+    width: 350px;
+    height: 350px;
+    top: 60%;
+    left: 65%;
+  }
+
+  .containerAni .closeBtn {
+    right: -150px;
+  }
+
+  .containerAni h1 {
+    font-weight: 700;
+    font-size: 2.2em;
+    text-transform: uppercase;
+    margin-top: 1.5em;
+    margin-bottom: 0.2em;
+  }
+
+  .containerAni h3 {
+    font-weight: 400;
+    font-size: 1.2em;
+  }
+
+  .testBtn {
+    margin-top: 1em;
+    font-size: 2em;
   }
 
   .productNum {
