--- a/src/components/Quizes/Quizes.module.css
+++ b/src/components/Quizes/Quizes.module.css
@@ -1,3 +1,10 @@
 .section {
-  height: 100vh;
+  height: 40%;
+  padding-top: 12em;
+}
+
+@media screen and (max-width: 480px) {
+  .section {
+    padding-top: 5em;
+  }
 }
