--- a/src/components/Quiz/Quiz.module.css
+++ b/src/components/Quiz/Quiz.module.css
@@ -24,7 +24,6 @@
   font-size: 1.2em;
   margin-top: 1.5em;
   margin-bottom: 2em;
-  border: 1px solid borderColor;
   padding: 1em;
   border-radius: 5px;
 }
@@ -32,7 +31,11 @@
 .div li:hover {
   border: 2px solid brandColor;
   cursor: pointer;
-  transition: border 100ms ease-in-out;
+  transition: border 50ms ease-in;
+}
+
+.active {
+  border: 2px solid brandColor;
 }
 
 @media screen and (max-width: 480px) {
