--- a/src/components/QuizResult/QuizResult.module.css
+++ b/src/components/QuizResult/QuizResult.module.css
@@ -18,6 +18,7 @@
 }
 
 .productContainer {
+  margin-bottom: 2em;
   width: 600px;
   height: 950px;
   background-color: rgba(204, 208, 205, 0.359);
@@ -79,33 +80,54 @@
 }
 
 .retryBtn {
-  font-size: 1.2em;
+  font-size: 1.5em;
   margin-top: 2em;
 }
 
 @media screen and (max-width: 480px) {
+  .section {
+    margin-top: 3em;
+  }
   .section h1 {
     font-size: 1em;
   }
 
   .productContainer {
-    width: 400px;
-    height: 700px;
+    width: 380px;
+    height: 660px;
+    margin-top: 1em;
+    margin-bottom: 2em;
+    border-radius: 50px;
+  }
+
+  .upperSide {
+    height: 80px;
+    margin-left: 1.5em;
+  }
+
+  .title {
+    font-size: 1em;
+  }
+
+  .imageContainer {
+    width: 50px;
+    height: 50px;
   }
 
   .image {
-    width: 400px;
+    width: 380px;
     height: 450px;
     margin-bottom: 0;
   }
 
   .description {
-    font-size: 0.9em;
+    font-size: 0.8em;
     font-weight: 300;
     padding-top: 1em;
   }
 
   .retryBtn {
+    margin-top: 3em;
     margin-bottom: 3em;
   }
 }
