--- a/src/components/ProductDetail/ProductDetail.module.css
+++ b/src/components/ProductDetail/ProductDetail.module.css
@@ -19,6 +19,8 @@
 .titleContainer {
   font-size: 1.2em;
   margin-bottom: 2em;
+  display: flex;
+  align-items: center;
 }
 .titleContainer p,
 h3,
@@ -110,11 +112,28 @@ h4 {
   width: 100px;
 }
 
+.matchBadge {
+  background-color: rgba(177, 94, 94, 0.893);
+  color: white;
+  padding: 0.5em;
+  border-radius: 20px;
+  font-weight: 500;
+  text-transform: uppercase;
+  margin-left: 1.5em;
+  cursor: pointer;
+}
+
 /* Med size  */
 @media screen and (max-width: 1200px) {
   .image {
     width: 50%;
     height: 100%;
+  }
+
+  .matchBadge {
+    background-color: rgba(177, 94, 94, 0.893);
+    margin-left: 1em;
+    font-size: 0.7em;
   }
 }
 
